--- a/ci-operator/config/openshift/installer/openshift-installer-fcos.yaml
+++ b/ci-operator/config/openshift/installer/openshift-installer-fcos.yaml
@@ -144,6 +144,10 @@ tests:
   commands: TEST_SUITE=openshift/conformance/parallel run-tests
   openshift_installer:
     cluster_profile: aws
+- as: e2e-gcp
+  commands: TEST_SUITE=openshift/conformance/parallel run-tests
+  openshift_installer:
+    cluster_profile: gcp
 - as: e2e-vsphere
   commands: TEST_SUITE=openshift/conformance/parallel run-tests
   openshift_installer_upi:
