adding run_when_changed selector for e2e and format and vendor checks

--- a/ci-operator/jobs/integr8ly/heimdall/integr8ly-heimdall-master-presubmits.yaml
+++ b/ci-operator/jobs/integr8ly/heimdall/integr8ly-heimdall-master-presubmits.yaml
@@ -1,7 +1,7 @@
 presubmits:
   integr8ly/heimdall:
   - agent: kubernetes
-    always_run: true
+    always_run: false
     branches:
     - master
     context: ci/prow/e2e
@@ -13,6 +13,7 @@ presubmits:
       pj-rehearse.openshift.io/can-be-rehearsed: "true"
     name: pull-ci-integr8ly-heimdall-master-e2e
     rerun_command: /test e2e
+    run_if_changed: ^(build/*)|^(cmd/*)|^(deploy/*)|^(pkg/*)|^(test/e2e/*)|^(vendor/*)|^(version/*)|^(go.*)|^(cli)
     spec:
       containers:
       - args:
@@ -71,7 +72,7 @@ presubmits:
           secretName: sentry-dsn
     trigger: (?m)^/test( | .* )e2e,?($|\s.*)
   - agent: kubernetes
-    always_run: true
+    always_run: false
     branches:
     - master
     context: ci/prow/format
@@ -83,6 +84,7 @@ presubmits:
       pj-rehearse.openshift.io/can-be-rehearsed: "true"
     name: pull-ci-integr8ly-heimdall-master-format
     rerun_command: /test format
+    run_if_changed: ^(cmd/*)|^(pkg/*)|^(test/e2e/*)|^(version/*)
     spec:
       containers:
       - args:
@@ -215,7 +217,7 @@ presubmits:
           secretName: sentry-dsn
     trigger: (?m)^/test( | .* )unit,?($|\s.*)
   - agent: kubernetes
-    always_run: true
+    always_run: false
     branches:
     - master
     context: ci/prow/vendor
@@ -227,6 +229,7 @@ presubmits:
       pj-rehearse.openshift.io/can-be-rehearsed: "true"
     name: pull-ci-integr8ly-heimdall-master-vendor
     rerun_command: /test vendor
+    run_if_changed: ^(cmd/*)|^(pkg/*)|^(test/e2e/*)|^(version/*)
     spec:
       containers:
       - args:
