--- a/clusters/build-clusters/01_cluster/openshift/release-controller/rpms-ocp-4.5.yaml
+++ b/clusters/build-clusters/01_cluster/openshift/release-controller/rpms-ocp-4.5.yaml
@@ -412,3 +412,73 @@ items:
           - --max-size=5g
           - --timeout=30m
           - /tmp/repos
+
+
+# Fedora packages for OKD's machine-os-content
+- apiVersion: v1
+  kind: Service
+  metadata:
+    name: okd-4-5
+    namespace: origin
+  spec:
+    selector:
+      app: okd-4-5
+    ports:
+    - port: 80
+      targetPort: 8080
+    type: ClusterIP
+- apiVersion: apps/v1
+  kind: Deployment
+  metadata:
+    name: okd-4-5
+    namespace: origin
+    labels:
+      app: okd-4-5
+    annotations:
+      image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"content-mirror:latest","namespace":"ci"},"fieldPath":"spec.template.spec.containers[?(@.name==\"mirror\")].image"}]'
+  spec:
+    replicas: 2
+    selector:
+      matchLabels:
+        app: okd-4-5
+    template:
+      metadata:
+        labels:
+          app: okd-4-5
+      spec:
+        volumes:
+        - name: repos
+          configMap:
+            name: base-repos
+            items:
+            - key: origin-4.5-fedora.repo
+              path: origin-4.5-fedora.repo
+        - name: key
+          secret:
+            secretName: mirror.openshift.com
+        - name: cache
+          emptyDir: {}
+        - name: run
+          emptyDir: {}
+        containers:
+        - name: mirror
+          ports:
+            - name: http
+              containerPort: 8080
+          volumeMounts:
+          - name: repos
+            mountPath: /tmp/repos
+            readOnly: true
+          - name: key
+            mountPath: /tmp/key
+            readOnly: true
+          - name: cache
+            mountPath: /tmp/cache
+          image: " "
+          workingDir: /tmp/repos
+          command:
+          - content-mirror
+          - --path=/tmp/config
+          - --max-size=5g
+          - --timeout=30m
+          - /tmp/repos
