--- a/clusters/build-clusters/01_cluster/prow/03_deployment/admin_config-updater_rbac.yaml
+++ b/clusters/build-clusters/01_cluster/prow/03_deployment/admin_config-updater_rbac.yaml
@@ -309,3 +309,68 @@ items:
   - kind: ServiceAccount
     name: config-updater
     namespace: ci
+- kind: Role
+  apiVersion: rbac.authorization.k8s.io/v1
+  metadata:
+    name: config-updater
+    namespace: origin
+  rules:
+    - apiGroups:
+        - apps
+      resources:
+        - deployments
+      verbs:
+        - get
+        - create
+        - update
+        - patch
+    - apiGroups:
+        - route.openshift.io
+      resources:
+        - routes
+      verbs:
+        - get
+        - create
+        - update
+        - patch
+    - apiGroups:
+        - ""
+      resources:
+        - serviceaccounts
+        - services
+        - secrets
+        - configmaps
+      verbs:
+        - get
+        - create
+        - update
+        - patch
+    - apiGroups:
+        - image.openshift.io
+      resources:
+        - imagestreams
+      verbs:
+        - get
+        - create
+        - update
+        - patch
+    - apiGroups:
+        - ""
+      resources:
+        - namespaces
+      verbs:
+        - get
+        - patch
+- kind: RoleBinding
+  apiVersion: rbac.authorization.k8s.io/v1
+  metadata:
+    name: config-updater
+    namespace: origin
+  roleRef:
+    apiGroup: rbac.authorization.k8s.io
+    kind: Role
+    name: config-updater
+  subjects:
+  - kind: ServiceAccount
+    name: config-updater
+    namespace: ci
