--- a/core-services/prow/02_config/_labels.yaml
+++ b/core-services/prow/02_config/_labels.yaml
@@ -495,6 +495,13 @@ repos:
         name: area/test-and-release
         target: both
         addedBy: label
+  openshift/knative-eventing:
+    labels:
+      - color: 00D8FF
+        description: Issues or PRs related to test and release
+        name: area/test-and-release
+        target: both
+        addedBy: label
   cri-o:
     labels:
       - color: e11d21
