template: Move 50% of CI jobs to azure central us, where we have more quota
We have 1k cores in azure centralus, and 200 in the others. Bias towards
centralus.

--- a/ci-operator/templates/openshift/installer/cluster-launch-installer-e2e.yaml
+++ b/ci-operator/templates/openshift/installer/cluster-launch-installer-e2e.yaml
@@ -476,11 +476,15 @@ objects:
         EOF
 
         elif [[ "${CLUSTER_TYPE}" == "azure4" ]]; then
-            case $((RANDOM % 4)) in
+            case $((RANDOM % 8)) in
             0) AZURE_REGION=centralus;;
-            1) AZURE_REGION=eastus;;
-            2) AZURE_REGION=eastus2;;
-            3) AZURE_REGION=westus;;
+            1) AZURE_REGION=centralus;;
+            2) AZURE_REGION=centralus;;
+            3) AZURE_REGION=centralus;;
+            4) AZURE_REGION=centralus;;
+            5) AZURE_REGION=eastus;;
+            6) AZURE_REGION=eastus2;;
+            7) AZURE_REGION=westus;;
             *) echo >&2 "invalid Azure region index"; exit 1;;
             esac
             echo "Azure region: ${AZURE_REGION}"
