core-services/prow/02_config: Add 'Resolved release' to Spyglass highlighting
Extending the default values [1] with an additional 'Resolved release'.  This should highlight:

  $ curl -s https://storage.googleapis.com/origin-ci-test/logs/release-openshift-origin-installer-e2e-aws-upgrade-4.2/92/build-log.txt | grep 'Resolved release'
  2020/01/08 17:10:54 Resolved release:latest quay.io/runcom/origin-release@sha256:b6525060d989c577a41ef47619761af0cff46b8bf1670c39ccf48082666edeec
  2020/01/08 17:10:55 Resolved release:initial registry.svc.ci.openshift.org/ocp/release@sha256:782b41750f3284f3c8ee2c1f8cb896896da074e362cf8a472846356d1617752d

hopefully reducing build-cop effort invested in updates that target
things like that custom quay.io/runcom/origin-release image [2].

The quoting around 'ERROR:' ensures it is interpreted as a string and
not as a YAML dictionary.

[1]: https://github.com/kubernetes/test-infra/blob/5a7d7ac9f0044f6fe8b5d80827aa523ef938cb6e/prow/spyglass/lenses/buildlog/lens.go#L66
[2]: https://bugzilla.redhat.com/show_bug.cgi?id=1789127#c4

--- a/core-services/prow/02_config/_config.yaml
+++ b/core-services/prow/02_config/_config.yaml
@@ -257,6 +257,14 @@ deck:
       required_files:
       - started.json|finished.json
     - lens:
+        config:
+          highlight_regexes:
+          - timed out
+          - 'ERROR:'
+          - (FAIL|Failure \[)\b
+          - panic\b
+          - ^E\d{4} \d\d:\d\d:\d\d\.\d\d\d]
+          - Resolved release
         name: buildlog
       required_files:
       - build-log.txt
