--- a/ci-operator/jobs/openshift/openshift-azure/openshift-openshift-azure-master-presubmits.yaml
+++ b/ci-operator/jobs/openshift/openshift-azure/openshift-openshift-azure-master-presubmits.yaml
@@ -322,6 +322,29 @@ presubmits:
       serviceAccountName: ci-operator
     trigger: (?m)^/test( | .* )upgrade-private-v12.2,?($|\s.*)
   - agent: kubernetes
+    always_run: false
+    branches:
+    - master
+    context: upgrade-private-v14.0
+    decorate: true
+    name: pull-ci-azure-master-upgrade-private-v14.0
+    rerun_command: /test upgrade-private-v14.0
+    spec:
+      containers:
+      - args:
+        - hack/tests/e2e-upgrade.sh
+        - v14.0
+        env:
+        - name: API_VERSION
+          value: 2019-10-27-preview
+        - name: PRIVATE_API_SERVER
+          value: "true"
+        image: registry.svc.ci.openshift.org/azure/ci-base:latest
+        name: ""
+        resources: {}
+      serviceAccountName: ci-operator
+    trigger: (?m)^/test( | .* )upgrade-private-v14.0,?($|\s.*)
+  - agent: kubernetes
     always_run: true
     branches:
     - master
@@ -357,6 +380,24 @@ presubmits:
         resources: {}
       serviceAccountName: ci-operator
     trigger: (?m)^/test( | .* )upgrade-v12.2,?($|\s.*)
+  - agent: kubernetes
+    always_run: true
+    branches:
+    - master
+    context: upgrade-v14.0
+    decorate: true
+    name: pull-ci-azure-master-upgrade-v14.0
+    rerun_command: /test upgrade-v14.0
+    spec:
+      containers:
+      - args:
+        - hack/tests/e2e-upgrade.sh
+        - v14.0
+        image: registry.svc.ci.openshift.org/azure/ci-base:latest
+        name: ""
+        resources: {}
+      serviceAccountName: ci-operator
+    trigger: (?m)^/test( | .* )upgrade-v14.0,?($|\s.*)
   - agent: kubernetes
     always_run: true
     branches:
