Revert "add -eou pipefail to remaining job templates"

--- a/ci-operator/templates/openshift/endurance/endurance-install.yaml
+++ b/ci-operator/templates/openshift/endurance/endurance-install.yaml
@@ -80,8 +80,7 @@ objects:
       - /bin/bash
       - -c
       - |
-        #!/bin/bash
-        set -euo pipefail
+        #!/bin/bash -x
         
         # fetch the oc binary so we can talk to the cluster.  
         export PATH=$PATH:/tmp/shared/bin
@@ -154,8 +153,7 @@ objects:
       - /bin/bash
       - -c
       - |
-        #!/bin/bash
-        set -euo pipefail
+        #!/bin/bash -x
 
         export PATH=$PATH:/tmp/shared/bin
 
@@ -379,8 +377,7 @@ objects:
       - /bin/sh
       - -c
       - |
-        #!/bin/bash
-        set -euo pipefail
+        #!/bin/sh -x
 
         export PATH=$PATH:/tmp/shared/bin
 
