--- a/ci-operator/templates/openshift/installer/cluster-launch-installer-custom-test-image.yaml
+++ b/ci-operator/templates/openshift/installer/cluster-launch-installer-custom-test-image.yaml
@@ -380,8 +380,8 @@ objects:
       - /bin/bash
       - -c
       - |
-        #!/bin/bash
-        set -euo pipefail
+        #!/bin/sh
+        set -e
 
         trap 'rc=$?; if test "${rc}" -eq 0; then touch /tmp/setup-success; else touch /tmp/exit /tmp/setup-failed; fi; exit "${rc}"' EXIT
         trap 'CHILDREN=$(jobs -p); if test -n "${CHILDREN}"; then kill ${CHILDREN} && wait; fi' TERM
@@ -660,8 +660,6 @@ objects:
       - -c
       - |
         #!/bin/bash
-        set -euo pipefail
-
         function queue() {
           local TARGET="${1}"
           shift
