--- a/ci-operator/templates/openshift/installer/cluster-launch-installer-libvirt-e2e.yaml
+++ b/ci-operator/templates/openshift/installer/cluster-launch-installer-libvirt-e2e.yaml
@@ -185,9 +185,8 @@ objects:
       - /bin/sh
       - -c
       - |
-        #!/bin/bash
+        #!/bin/sh
         set -euo pipefail
-
         trap 'rc=$?; if test "${rc}" -eq 0; then touch "${HOME}"/setup-success; else touch "${HOME}"/exit; fi; exit "${rc}"' EXIT
         trap 'CHILDREN=$(jobs -p); if test -n "${CHILDREN}"; then kill ${CHILDREN} && wait; fi' TERM
         cat  > "${HOME}"/run-tests.sh << 'EOF'
