--- a/ci-operator/templates/openshift/installer/cluster-launch-installer-metal-e2e.yaml
+++ b/ci-operator/templates/openshift/installer/cluster-launch-installer-metal-e2e.yaml
@@ -226,10 +226,8 @@ objects:
       - /bin/sh
       - -c
       - |
-        #!/bin/bash
-        set -euo pipefail
-        set -x
-        
+        #!/bin/sh
+        set -ex
         trap 'rc=$?; if test "${rc}" -eq 0; then touch /tmp/setup-success; else touch /tmp/exit /tmp/setup-failed; fi; exit "${rc}"' EXIT
         trap 'CHILDREN=$(jobs -p); if test -n "${CHILDREN}"; then kill ${CHILDREN} && wait; fi' TERM
 
@@ -517,8 +515,6 @@ objects:
       - -c
       - |
         #!/bin/bash
-        set -euo pipefail
-
         function queue() {
           local TARGET="${1}"
           shift
