--- a/ci-operator/templates/openshift/installer/cluster-launch-installer-ovirt-e2e.yaml
+++ b/ci-operator/templates/openshift/installer/cluster-launch-installer-ovirt-e2e.yaml
@@ -323,9 +323,7 @@ objects:
       - /bin/sh
       - -c
       - |
-        #!/bin/bash
-        set -euo pipefail
-
+        #!/bin/sh
         trap 'rc=$?; if test "${rc}" -eq 0; then touch /tmp/setup-success; else touch /tmp/exit; fi; exit "${rc}"' EXIT
         trap 'CHILDREN=$(jobs -p); if test -n "${CHILDREN}"; then kill ${CHILDREN} && wait; fi' TERM
         # Wait untill lease is acquired
@@ -451,8 +449,6 @@ objects:
       - -c
       - |
         #!/bin/bash
-        set -euo pipefail
-
         function queue() {
           local TARGET="${1}"
           shift
