--- a/ci-operator/templates/openshift/installer/cluster-launch-installer-src.yaml
+++ b/ci-operator/templates/openshift/installer/cluster-launch-installer-src.yaml
@@ -243,7 +243,7 @@ objects:
       - /bin/bash
       - -c
       - |
-        #!/bin/bash
+        #!/bin/sh
         set -euo pipefail
 
         trap 'rc=$?; if test "${rc}" -eq 0; then touch /tmp/setup-success; else touch /tmp/exit /tmp/setup-failed; fi; exit "${rc}"' EXIT
@@ -566,8 +566,6 @@ objects:
       - -c
       - |
         #!/bin/bash
-        set -euo pipefail
-
         function queue() {
           local TARGET="${1}"
           shift
