--- a/ci-operator/templates/openshift/installer/cluster-launch-installer-upi-e2e.yaml
+++ b/ci-operator/templates/openshift/installer/cluster-launch-installer-upi-e2e.yaml
@@ -338,9 +338,8 @@ objects:
       - /bin/sh
       - -c
       - |
-        #!/bin/bash
+        #!/bin/sh
         set -euo pipefail
-
         trap 'rc=$?; if test "${rc}" -eq 0; then touch /tmp/setup-success; else touch /tmp/exit /tmp/setup-failed; fi; exit "${rc}"' EXIT
         trap 'CHILDREN=$(jobs -p); if test -n "${CHILDREN}"; then kill ${CHILDREN} && wait; fi' TERM
 
@@ -1856,7 +1855,6 @@ objects:
       - -c
       - |
         #!/bin/bash
-        set -euo pipefail
 
         function queue() {
           local TARGET="${1}"
