--- a/ci-operator/templates/openshift/openshift-ansible/cluster-scaleup-e2e-40.yaml
+++ b/ci-operator/templates/openshift/openshift-ansible/cluster-scaleup-e2e-40.yaml
@@ -224,9 +224,7 @@ objects:
       - /bin/sh
       - -c
       - |
-        #!/bin/bash
-        set -euo pipefail
-        
+        #!/bin/sh
         trap 'rc=$?; if test "${rc}" -eq 0; then touch /tmp/setup-success; else touch /tmp/exit /tmp/setup-failed; fi; exit "${rc}"' EXIT
         trap 'CHILDREN=$(jobs -p); if test -n "${CHILDREN}"; then kill ${CHILDREN} && wait; fi' TERM
         cp "$(command -v openshift-install)" /tmp
@@ -364,8 +362,6 @@ objects:
       - -c
       - |
         #!/bin/bash
-        set -euo pipefail
-
         function queue() {
           local TARGET="${1}"
           shift
