--- a/ci-operator/templates/openshift/openshift-azure/cluster-launch-e2e-azure.yaml
+++ b/ci-operator/templates/openshift/openshift-azure/cluster-launch-e2e-azure.yaml
@@ -158,6 +158,7 @@ objects:
       - -c
       - |
         #!/bin/bash
+        # error handling and sync code
         set -euo pipefail
 
         trap 'touch /tmp/shared/exit' EXIT
@@ -270,7 +271,7 @@ objects:
       - /bin/bash
       - -c
       - |
-        #!/bin/bash
+       #!/bin/bash
         set -euo pipefail
 
         trap 'rc=$?; if [[ $rc -ne 0 ]]; then
@@ -360,7 +361,6 @@ objects:
       - -c
       - |
         #!/bin/bash
-        set -euo pipefail
 
         # teardown is collecting debug data and deleting all used resources
         function teardown() {
