--- a/ci-operator/templates/openshift/installer/cluster-launch-installer-libvirt-e2e.yaml
+++ b/ci-operator/templates/openshift/installer/cluster-launch-installer-libvirt-e2e.yaml
@@ -281,7 +281,8 @@ objects:
       - -c
       - |
         #!/bin/bash
-        set -euo pipefail
+        set -eo pipefail
+
         function teardown() {
           # This is for running the gcloud commands
           mock-nss.sh
