--- a/ci-operator/templates/openshift/openshift-ansible/cluster-launch-e2e-openshift-ansible.yaml
+++ b/ci-operator/templates/openshift/openshift-ansible/cluster-launch-e2e-openshift-ansible.yaml
@@ -255,7 +255,7 @@ objects:
       - -c
       - |
         #!/bin/bash
-        set -euo pipefail
+        set -eo pipefail
 
         function teardown() {
           set +e
