--- a/ci-operator/templates/openshift/openshift-ansible/cluster-launch-e2e.yaml
+++ b/ci-operator/templates/openshift/openshift-ansible/cluster-launch-e2e.yaml
@@ -216,7 +216,7 @@ objects:
       - -c
       - |
         #!/bin/bash
-        set -euo pipefail
+        set -eo pipefail
 
         function teardown() {
           set +e
