--- a/ci-operator/templates/openshift/openshift-azure/cluster-launch-e2e-azure.yaml
+++ b/ci-operator/templates/openshift/openshift-azure/cluster-launch-e2e-azure.yaml
@@ -360,7 +360,7 @@ objects:
       - -c
       - |
         #!/bin/bash
-        set -euo pipefail
+        set -eo pipefail
 
         # teardown is collecting debug data and deleting all used resources
         function teardown() {
