--- a/ci-operator/templates/openshift/installer/cluster-launch-installer-e2e.yaml
+++ b/ci-operator/templates/openshift/installer/cluster-launch-installer-e2e.yaml
@@ -731,7 +731,7 @@ objects:
       - -c
       - |
         #!/bin/bash
-        set -euo pipefail
+        set -eo pipefail
 
         function queue() {
           local TARGET="${1}"
