--- a/ci-operator/templates/openshift/installer/cluster-launch-installer-src.yaml
+++ b/ci-operator/templates/openshift/installer/cluster-launch-installer-src.yaml
@@ -566,7 +566,7 @@ objects:
       - -c
       - |
         #!/bin/bash
-        set -euo pipefail
+        set -eo pipefail
 
         function queue() {
           local TARGET="${1}"
