--- a/ci-operator/templates/openshift/openshift-ansible/cluster-launch-e2e-openshift-jenkins.yaml
+++ b/ci-operator/templates/openshift/openshift-ansible/cluster-launch-e2e-openshift-jenkins.yaml
@@ -312,7 +312,7 @@ objects:
       - -c
       - |
         #!/bin/bash
-        set -euo pipefail
+        set -eo pipefail
 
         function teardown() {
           set +e
