--- a/ci-operator/templates/openshift/openshift-ansible/cluster-launch-e2e-upgrade.yaml
+++ b/ci-operator/templates/openshift/openshift-ansible/cluster-launch-e2e-upgrade.yaml
@@ -260,7 +260,7 @@ objects:
       - -c
       - |
         #!/bin/bash
-        set -euo pipefail
+        set -eo pipefail
 
         function teardown() {
           set +e
