--- a/ci-operator/jobs/openshift/cluster-kube-controller-manager-operator/openshift-cluster-kube-controller-manager-operator-master-presubmits.yaml
+++ b/ci-operator/jobs/openshift/cluster-kube-controller-manager-operator/openshift-cluster-kube-controller-manager-operator-master-presubmits.yaml
@@ -286,6 +286,77 @@ presubmits:
     always_run: true
     branches:
     - master
+    context: ci/prow/e2e-new
+    decorate: true
+    decoration_config:
+      skip_cloning: true
+    labels:
+      pj-rehearse.openshift.io/can-be-rehearsed: "true"
+    name: pull-ci-openshift-cluster-kube-controller-manager-operator-master-e2e-new
+    rerun_command: /test e2e-new
+    spec:
+      containers:
+      - args:
+        - --artifact-dir=$(ARTIFACTS)
+        - --branch=master
+        - --give-pr-author-access-to-namespace=true
+        - --lease-server=http://boskos
+        - --org=openshift
+        - --repo=cluster-kube-controller-manager-operator
+        - --resolver-address=http://ci-operator-configresolver-ci.svc.ci.openshift.org
+        - --secret-dir=/usr/local/e2e-new-cluster-profile
+        - --sentry-dsn-path=/etc/sentry-dsn/ci-operator
+        - --target=e2e-new
+        - --template=/usr/local/e2e-new
+        command:
+        - ci-operator
+        env:
+        - name: CLUSTER_TYPE
+          value: aws
+        - name: CONFIG_SPEC
+          valueFrom:
+            configMapKeyRef:
+              key: openshift-cluster-kube-controller-manager-operator-master.yaml
+              name: ci-operator-master-configs
+        - name: JOB_NAME_SAFE
+          value: e2e-new
+        - name: TEST_COMMAND
+          value: |
+              TEST_SUITE=openshift/conformance/parallel run-tests-kubernetes
+              TEST_SUITE=openshift/conformance/parallel run-tests-extended
+        image: ci-operator:latest
+        imagePullPolicy: Always
+        name: ""
+        resources:
+          requests:
+            cpu: 10m
+        volumeMounts:
+        - mountPath: /usr/local/e2e-new-cluster-profile
+          name: cluster-profile
+        - mountPath: /usr/local/e2e-new
+          name: job-definition
+          subPath: cluster-launch-installer-e2e-temp-new-test-binary.yaml
+        - mountPath: /etc/sentry-dsn
+          name: sentry-dsn
+          readOnly: true
+      serviceAccountName: ci-operator
+      volumes:
+      - name: cluster-profile
+        projected:
+          sources:
+          - secret:
+              name: cluster-secrets-aws
+      - configMap:
+          name: prow-job-cluster-launch-installer-e2e-temp-new-test-binary
+        name: job-definition
+      - name: sentry-dsn
+        secret:
+          secretName: sentry-dsn
+    trigger: (?m)^/test( | .* )e2e-new,?($|\s.*)
+  - agent: kubernetes
+    always_run: true
+    branches:
+    - master
     context: ci/prow/images
     decorate: true
     decoration_config:
